--- a/front/webav360/src/app/alunos/alunos.component.html
+++ b/front/webav360/src/app/alunos/alunos.component.html
@@ -1,19 +1,27 @@
 <div class="">
-  <table id="main-table" class="table table-striped text-center">
+  <div class="row p-1 w-100">
+    <div class="col-10">
+      <input type="text" class="form-control w-100 h-100" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroLista">
+    </div>
+    <div class="col-2 p-0">
+      <button id="btn-buscar" class="btn btn-outline-success w-100" >Buscar</button>
+    </div>
+  </div>
+  <table id="main-table" class="table table-striped text-center table-hover">
     <thead class="table-dark">
       <tr>
-        <th>#</th>
+        <th style = 'width: 10%; text-align: center;'>#</th>
         <th>Nome</th>
-        <th>Ações</th>
+        <th style = 'width: 20%; text-align: center;'>Ações</th>
       </tr>
     </thead>
     <tbody>
       @if (alunos && alunos.length){
         @for (aluno of alunosFiltrados; track aluno; let a = $index){
           <tr>
-            <td>{{aluno.id}}</td>
+            <td style= 'text-align: center'>{{aluno.id}}</td>
             <td>{{aluno.nome}}</td>
-            <td>
+            <td style= 'text-align: center'>
               <button type="button" class="btn-editar btn btn-primary btn-sm mr-2">Editar</button>
               <button type="button" class="btn-excluir btn btn-danger btn-sm">Excluir</button>
             </td>
