--- a/front/webav360/src/app/Components/alunos/alunos.component.html
+++ b/front/webav360/src/app/Components/alunos/alunos.component.html
@@ -22,7 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      @if (alunos && alunos.length){
+      @if (alunosFiltrados && alunosFiltrados.length){
         @for (aluno of alunosFiltrados; track aluno; let a = $index){
           <tr>
             <td style= 'text-align: center'>{{aluno.id}}</td>
@@ -40,7 +40,7 @@
       }
     </tbody>
     <tfoot >
-      @if (!alunos.length){
+      @if (!alunosFiltrados.length){
         <tr>
           <td colspan="8" class="text-center">
             <h4>Nenhum Aluno encontrado!</h4>
