--- a/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
+++ b/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
@@ -1,9 +1,18 @@
-@if(loaded){
 <div class="container">
-  <div>
-    <h1 class = "col-10">Turma {{turma.cod}}</h1>
+  <div class="row p-1">
+    <div class="col-10">
+      <h1 class = "">Turma {{turma?.cod}}</h1>
+    </div>
+    <div class="col-2">
+      <button id="btn-buscar" class="btn btn-outline-success w-100 col-2" (click)="editarTurma();">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="auto" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+        </svg>
+        Editar
+      </button>
+    </div>
   </div>
-  <div>
+  <div class="row">
     <h2 class = "col-10">Alunos</h2>
   </div>
   <div class="row p-1 w-100">
@@ -28,7 +37,7 @@
       </tr>
     </thead>
     <tbody>
-      @if (alunos && alunos.length){
+      @if (alunosFiltrados && alunosFiltrados.length){
         @for (aluno of alunosFiltrados; track aluno; let a = $index){
           <tr>
             <td style= 'text-align: center'>{{aluno.id}}</td>
@@ -46,7 +55,7 @@
       }
     </tbody>
     <tfoot >
-      @if (!alunos.length){
+      @if (!alunosFiltrados.length){
         <tr>
           <td colspan="8" class="text-center">
             <h4>Nenhum Aluno encontrado!</h4>
@@ -59,6 +68,7 @@
 
   <div>
     <h2 class = "col-10">Critérios</h2>
+    <span class = "">Nota Máxima: {{turma?.notaMax}}</span >
   </div>
   <div class="row p-1 w-100">
     <div class="col-10">
@@ -82,7 +92,7 @@
       </tr>
     </thead>
     <tbody>
-      @if (criterios && criterios.length){
+      @if (criteriosFiltrados && criteriosFiltrados.length){
         @for (criterio of criteriosFiltrados; track criterio; let c = $index){
           <tr>
             <td style= 'text-align: center'>{{criterio.id}}</td>
@@ -100,7 +110,7 @@
       }
     </tbody>
     <tfoot >
-      @if (!criterios.length){
+      @if (!criteriosFiltrados.length){
         <tr>
           <td colspan="8" class="text-center">
             <h4>Nenhum Criterio encontrado!</h4>
@@ -110,4 +120,3 @@
     </tfoot>
   </table>
 </div>
-}
