--- a/front/webav360/src/app/Components/turmas/turmas.component.html
+++ b/front/webav360/src/app/Components/turmas/turmas.component.html
@@ -29,7 +29,7 @@
       </tr>
     </thead>
     <tbody>
-      @if (turmas && turmas.length){
+      @if (turmasFiltradas && turmasFiltradas.length){
         @for (turma of turmasFiltradas; track turma; let t = $index){
           <tr>
             <td style= 'text-align: center'>{{turma.id}}</td>
@@ -49,7 +49,7 @@
       }
     </tbody>
     <tfoot >
-      @if (!turmas.length){
+      @if (!turmasFiltradas.length){
         <tr>
           <td colspan="8" class="text-center">
             <h4>Nenhum evento encontrado!</h4>
