--- a/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
+++ b/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
@@ -1,33 +1,20 @@
 <div class="container">
-  <div class="row p-1">
-    <div class="col-10">
+  <div class="row m-2">
+    <div class="col-8">
       <h1 class = "">Turma {{turma?.cod}}</h1>
     </div>
-    <div class="col-2">
-      <button id="btn-buscar" class="btn btn-outline-success w-100 col-2" (click)="editarTurma();">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="auto" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-        </svg>
-        Editar
-      </button>
-    </div>
+    <button id="btn-buscar" class="btn btn-success col-4" (click)="editarTurma();">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="auto" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+      </svg>
+      Editar
+    </button>
   </div>
-  <div class="row">
-    <h2 class = "col-10">Alunos</h2>
-  </div>
-  <div class="row p-1 w-100">
-    <div class="col-10">
-      <input type="text" class="form-control w-100 h-100" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroAlunos">
-    </div>
-    <div class="col-2 p-0">
-      <button id="btn-buscar" class="btn btn-outline-success w-100" >
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-        </svg>
-        Buscar
-      </button>
-    </div>
-  </div>
+
+  <h2 class="m-2">Alunos</h2>
+
+  <input type="text" class="form-control w-100 h-100 m-2" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroAlunos">
+
   <table id="main-table" class="table table-striped text-center table-hover">
     <thead class="table-dark">
       <tr>
@@ -66,23 +53,13 @@
   </table>
 
 
-  <div>
-    <h2 class = "col-10">Critérios</h2>
-    <span class = "">Nota Máxima: {{turma?.notaMax}}</span >
+  <div class="m-2">
+    <h2>Critérios</h2>
+    <span>Nota Máxima: {{turma?.notaMax}}</span >
   </div>
-  <div class="row p-1 w-100">
-    <div class="col-10">
-      <input type="text" class="form-control w-100 h-100" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
-    </div>
-    <div class="col-2 p-0">
-      <button id="btn-buscar" class="btn btn-outline-success w-100" >
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-        </svg>
-        Buscar
-      </button>
-    </div>
-  </div>
+
+  <input type="text" class="form-control m-2 p-2" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
+
   <table id="main-table" class="table table-striped text-center table-hover">
     <thead class="table-dark">
       <tr>
