--- a/front/webav360/src/app/Components/criterios/criterios.component.html
+++ b/front/webav360/src/app/Components/criterios/criterios.component.html
@@ -1,17 +1,18 @@
 <div class="container">
-  <div class="row p-1 w-100">
-    <div class="col-10">
-      <input type="text" class="form-control w-100 h-100" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroLista">
+  <div class="row m-2">
+    <div class="col-8">
+      <h1>Criterios</h1>
     </div>
-    <div class="col-2 p-0">
-      <button id="btn-buscar" class="btn btn-outline-success w-100" >
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-        </svg>
-        Buscar
-      </button>
-    </div>
+    <button id="btn-buscar" class="btn btn-success col-4" >
+      <svg xmlns="http://www.w3.org/2000/svg" width="1.6" height="auto" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+      </svg>
+      Adicionar
+    </button>
   </div>
+
+  <input type="text" class="form-control w-100 h-100 m-2" style = "font-size: 1.6rem;" placeholder="Filtrar" [(ngModel)]="filtroLista">
+
   <table id="main-table" class="table table-striped text-center table-hover">
     <thead class="table-dark">
       <tr>
