Backend Adição de entidades persistência, services e controllers de grupos e sessoes

--- a/front/webav360/src/app/Components/turmas/turmas.component.html
+++ b/front/webav360/src/app/Components/turmas/turmas.component.html
@@ -35,7 +35,7 @@
                   <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                   <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
                 </svg>
-                Editar
+                Acessar
               </button>
             </td>
           </tr>
@@ -46,7 +46,7 @@
       @if (!turmasFiltradas.length){
         <tr>
           <td colspan="8" class="text-center">
-            <h4>Nenhum evento encontrado!</h4>
+            <h4>Nenhuma turma encontrada!</h4>
           </td>
         </tr>
       }
