--- a/front/webav360/src/app/Components/criterios/criterios.component.html
+++ b/front/webav360/src/app/Components/criterios/criterios.component.html
@@ -43,7 +43,7 @@
       @if (!criteriosFiltrados.length){
         <tr>
           <td colspan="8" class="text-center">
-            <h4>Nenhum evento encontrado!</h4>
+            <h4>Nenhum critério encontrado!</h4>
           </td>
         </tr>
       }
