--- a/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
+++ b/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
@@ -1,115 +1,201 @@
 <div class="container">
   <div class="row m-2">
-    <div class="col-5">
+    <div class="col-8">
       <h1 class = "">Turma {{turma?.cod}}</h1>
     </div>
-    <div class="col-7">
-      <button id="btn-buscar" class="btn btn-primary m-2 w-50" (click)="editarTurma();">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-        </svg>
-        Editar
-      </button>
-      <button id="btn-buscar" class="btn btn-primary m-2 w-50" (click)="importAlunos();">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-spreadsheet" viewBox="0 0 16 16">
-          <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V9H3V2a1 1 0 0 1 1-1h5.5zM3 12v-2h2v2zm0 1h2v2H4a1 1 0 0 1-1-1zm3 2v-2h3v2zm4 0v-2h3v1a1 1 0 0 1-1 1zm3-3h-3v-2h3zm-7 0v-2h3v2z"/>
-        </svg>
-        Importar Alunos
-      </button>
-    </div>
+    <button id="btn-buscar" class="btn btn-primary col-4" (click)="editarTurma();">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+      </svg>
+      Editar
+    </button>
   </div>
 
-  <h2 class="m-2">Alunos</h2>
-
-  <input type="text" class="form-control w-100 h-100 m-2" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroAlunos">
-
-  <table id="main-table" class="table table-striped text-center table-hover">
-    <thead class="table-dark">
-      <tr>
-        <th style = 'width: 10%; text-align: center;'>#</th>
-        <th>Nome</th>
-        <th style = 'width: 20%; text-align: center;'>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      @if (alunosFiltrados && alunosFiltrados.length){
-        @for (aluno of alunosFiltrados; track aluno; let a = $index){
-          <tr>
-            <td style= 'text-align: center'>{{aluno.id}}</td>
-            <td>{{aluno.nome}}</td>
-            <td style= 'text-align: center'>
-              <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " >
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                  <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-                </svg>
-                Editar
-              </button>
-            </td>
-          </tr>
-        }
-      }
-    </tbody>
-    <tfoot >
-      @if (!alunosFiltrados.length){
-        <tr>
-          <td colspan="8" class="text-center">
-            <h4>Nenhum Aluno encontrado!</h4>
-          </td>
-        </tr>
-      }
-    </tfoot>
-  </table>
-
-
-  <div class="m-2">
-    <h2>Critérios</h2>
-    <div class="row">
-      <span class="col-8">Nota Máxima: {{turma?.notaMax}}</span >
-      <button id="btn-buscar" class="btn btn-primary col-4" (click)="adicionarCriterioTurma();">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-        </svg>
-        Editar
-      </button>
+  <div ngbAccordion>
+    <div ngbAccordionItem [collapsed]="false">
+      <h2 ngbAccordionHeader>
+        <button ngbAccordionButton>
+          <h2>Alunos</h2>
+        </button>
+      </h2>
+      <div ngbAccordionCollapse>
+        <div ngbAccordionBody>
+          <ng-template>
+            <div class="m-2">
+              <div class="row">
+                <div class="col-8 p-2">
+                  <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroAlunos">
+                </div>
+                <div class="col-4 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="importAlunos();">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-file-earmark-spreadsheet" viewBox="0 0 16 16">
+                      <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V9H3V2a1 1 0 0 1 1-1h5.5zM3 12v-2h2v2zm0 1h2v2H4a1 1 0 0 1-1-1zm3 2v-2h3v2zm4 0v-2h3v1a1 1 0 0 1-1 1zm3-3h-3v-2h3zm-7 0v-2h3v2z"/>
+                    </svg>
+                    Importar Alunos
+                  </button>
+                </div>
+              </div>
+            </div>
+            <table id="main-table" class="table table-striped text-center table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th style = 'width: 10%; text-align: center;'>#</th>
+                  <th>Nome</th>
+                  <th style = 'width: 20%; text-align: center;'>Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                @if (alunosFiltrados && alunosFiltrados.length){
+                  @for (aluno of alunosFiltrados; track aluno; let a = $index){
+                    <tr>
+                      <td style= 'text-align: center'>{{aluno.id}}</td>
+                      <td>{{aluno.nome}}</td>
+                      <td style= 'text-align: center'>
+                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " >
+                          <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                          </svg>
+                          Editar
+                        </button>
+                      </td>
+                    </tr>
+                  }
+                }
+              </tbody>
+              <tfoot >
+                @if (!alunosFiltrados.length){
+                  <tr>
+                    <td colspan="8" class="text-center">
+                      <h4>Nenhum Aluno encontrado!</h4>
+                    </td>
+                  </tr>
+                }
+              </tfoot>
+            </table>
+          </ng-template>
+        </div>
+      </div>
+    </div>
+    <div ngbAccordionItem>
+      <h2 ngbAccordionHeader>
+        <button ngbAccordionButton>
+          <h2>Critérios</h2>
+        </button>
+      </h2>
+      <div ngbAccordionCollapse>
+        <div ngbAccordionBody>
+          <ng-template>
+            <div class="m-2">
+              <span class="">Nota Máxima: {{turma?.notaMax}}</span >
+              <div class="row">
+                <div class="col-8 p-2">
+                  <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
+                </div>
+                <div class="col-4 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100 " (click)="adicionarCriterioTurma();">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                      <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                    </svg>
+                    Alterar Critérios
+                  </button>
+                </div>
+              </div>
+            </div>
+            <table id="main-table" class="table table-striped text-center table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th style = 'width: 10%; text-align: center;'>#</th>
+                  <th>Nome</th>
+                  <th style = 'width: 20%; text-align: center;'>Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                @if (criteriosFiltrados && criteriosFiltrados.length){
+                  @for (criterio of criteriosFiltrados; track criterio; let c = $index){
+                    <tr>
+                      <td style= 'text-align: center'>{{criterio.id}}</td>
+                      <td>{{criterio.nome}}</td>
+                      <td style= 'text-align: center'>
+                        <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " (click)="editarCriterio(criterio)">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                          </svg>
+                          Editar
+                        </button>
+                      </td>
+                    </tr>
+                  }
+                }
+              </tbody>
+              <tfoot >
+                @if (!criteriosFiltrados.length){
+                  <tr>
+                    <td colspan="8" class="text-center">
+                      <h4>Nenhum Criterio encontrado!</h4>
+                    </td>
+                  </tr>
+                }
+              </tfoot>
+            </table>
+          </ng-template>
+        </div>
+      </div>
+    </div>
+    <div ngbAccordionItem>
+      <h2 ngbAccordionHeader>
+        <button ngbAccordionButton>
+          <h2>Equipes</h2>
+        </button>
+      </h2>
+      <div ngbAccordionCollapse>
+        <div ngbAccordionBody>
+          <ng-template>
+            <div class="m-2">
+              <div class="row">
+                <div class="col-8 p-2">
+                  <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroGrupos">
+                </div >
+                <div class="col-4 p-2 header-button">
+                  <button id="btn-buscar" class="btn btn-primary w-100" (click)="alterarGruposTurma();">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                      <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                    </svg>
+                    Editar Equipes
+                  </button>
+                </div>
+              </div>
+            </div>
+            <table id="main-table" class="table table-striped text-center table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th style = 'width: 10%; text-align: center;'>#</th>
+                  <th>Nome</th>
+                  <th style = 'width: 20%; text-align: center;'>Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                @if (gruposFiltrados && gruposFiltrados.length){
+                  @for (grupos of gruposFiltrados; track grupos; let c = $index){
+                    <tr>
+                      <td style= 'text-align: center'>{{grupos.id}}</td>
+                      <td>{{grupos.nome}}</td>
+                    </tr>
+                  }
+                }
+              </tbody>
+              <tfoot >
+                @if (!gruposFiltrados.length){
+                  <tr>
+                    <td colspan="8" class="text-center">
+                      <h4>Nenhuma Equipe encontrada!</h4>
+                    </td>
+                  </tr>
+                }
+              </tfoot>
+            </table>
+          </ng-template>
+        </div>
+      </div>
     </div>
   </div>
-
-  <input type="text" class="form-control m-2 p-2" style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
-
-  <table id="main-table" class="table table-striped text-center table-hover">
-    <thead class="table-dark">
-      <tr>
-        <th style = 'width: 10%; text-align: center;'>#</th>
-        <th>Nome</th>
-        <th style = 'width: 20%; text-align: center;'>Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      @if (criteriosFiltrados && criteriosFiltrados.length){
-        @for (criterio of criteriosFiltrados; track criterio; let c = $index){
-          <tr>
-            <td style= 'text-align: center'>{{criterio.id}}</td>
-            <td>{{criterio.nome}}</td>
-            <td style= 'text-align: center'>
-              <button type="button" class="btn-editar btn btn-primary btn-sm mr-2 " >
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                  <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
-                </svg>
-                Editar
-              </button>
-            </td>
-          </tr>
-        }
-      }
-    </tbody>
-    <tfoot >
-      @if (!criteriosFiltrados.length){
-        <tr>
-          <td colspan="8" class="text-center">
-            <h4>Nenhum Criterio encontrado!</h4>
-          </td>
-        </tr>
-      }
-    </tfoot>
-  </table>
 </div>
