--- a/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
+++ b/front/webav360/src/app/Components/alunos_turma/alunos_turma.component.html
@@ -92,7 +92,7 @@
                   <input type="text" class="form-control " style = "font-size: 1.6rem;" placeholder="Buscar" [(ngModel)]="filtroCriterios">
                 </div>
                 <div class="col-4 p-2 header-button">
-                  <button id="btn-buscar" class="btn btn-primary w-100 " (click)="adicionarCriterioTurma();">
+                  <button id="btn-buscar" class="btn btn-primary w-100 " (click)="alterarCriterioTurma();">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                       <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
                     </svg>
@@ -175,10 +175,18 @@
               </thead>
               <tbody>
                 @if (gruposFiltrados && gruposFiltrados.length){
-                  @for (grupos of gruposFiltrados; track grupos; let c = $index){
+                  @for (grupo of gruposFiltrados; track grupo; let c = $index){
                     <tr>
-                      <td style= 'text-align: center'>{{grupos.id}}</td>
-                      <td>{{grupos.nome}}</td>
+                      <td style= 'text-align: center'>{{grupo.id}}</td>
+                      <td>{{grupo.nome}}</td>
+                      <td>
+                        <button id="btn-buscar" class="btn btn-primary w-100" (click)="alterarAlunosGrupo(grupo);">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.5.5 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11z"/>
+                          </svg>
+                          Alterar
+                        </button>
+                      </td>
                     </tr>
                   }
                 }
